<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="actionbar_item_shuffle_play">Shuffle</string>
    <string name="add_to_playlist_create_playlist_button">Create playlist</string>
    <string name="add_to_playlist_failed">Oops, something went wrong!</string>
    <string name="add_to_playlist_row_playlist_has_no_name"><i>Unnamed playlist</i></string>
    <string name="add_to_playlist_row_subtitle_owned_by_you">By you</string>
    <string name="add_to_playlist_title">Add to playlist</string>
    <string name="add_to_playlist_track_added_toast">Added to %s</string>
    <string name="app_name">Spotify Lite</string>
    <string name="app_rater_dialog_body">If you are enjoying %1$s (and we hope you are!), perhaps consider rating us 5 stars on Google Play.</string>
    <string name="app_rater_dialog_negative">No, Thanks</string>
    <string name="app_rater_dialog_positive">Rate us!</string>
    <string name="app_rater_dialog_title">Recommend %1$s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="artist_search_empty_title">Find your favorite artists</string>
    <string name="artist_search_hint_text">Search for an artist</string>
    <string name="artist_search_loading_title">Loading…</string>
    <string name="artist_search_no_match_description">Try searching again or using a different spelling or keyword.</string>
    <string name="artist_search_no_match_title">"Couldn't find \"%s\""</string>
    <string name="asset_statements">[{ \"include\": \"https://www.spotify.com/.well-known/assetlinks.json\" }]</string>
    <string name="assisted_curation_card_title_genre">%s for you</string>
    <string name="assisted_curation_card_title_recent_plays">Recently played songs</string>
    <string name="assisted_curation_card_title_similar_to">Similar to %s</string>
    <string name="assisted_curation_card_title_similar_to_artist_or_album">More from %s</string>
    <string name="assisted_curation_card_title_suggested_songs">Suggested</string>
    <string name="assisted_curation_search">Search artists, albums and songs</string>
    <string name="assisted_curation_search_delete_recent_searches">Clear all</string>
    <string name="assisted_curation_search_error_network">Hmm, something’s gone wrong. Please check your Internet connection.</string>
    <string name="assisted_curation_search_hint_text">Search artist, albums or songs</string>
    <string name="assisted_curation_search_initial_subtext">from millions of artists, albums and songs</string>
    <string name="assisted_curation_search_initial_text">Find the music you love</string>
    <string name="assisted_curation_search_recent_searches">Recent searches</string>
    <string name="assisted_curation_toast_added_to_playlist">Added to playlist.</string>
    <string name="assisted_curation_toast_error_adding_to_playlist">Could not add to playlist.</string>
    <string name="audio_quality_160_description">About 2–4 MB per song</string>
    <string name="audio_quality_24_description">About 0.5 MB per song</string>
    <string name="audio_quality_320_description">About 5–10 MB per song</string>
    <string name="audio_quality_96_description">About 1 MB per song</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="browse_search">Search artists, songs and playlists</string>
    <string name="button_add_artist">Add Artists</string>
    <string name="button_continue_with_facebook">Continue with Facebook</string>
    <string name="button_create_playlist">Create Playlist</string>
    <string name="button_edit_phone_number">Edit phone number</string>
    <string name="button_email">Email</string>
    <string name="button_login">Log In</string>
    <string name="button_phone">Phone number</string>
    <string name="button_request_otp">Next</string>
    <string name="button_resend_sms">Resend SMS</string>
    <string name="button_sign_up">Sign Up Free</string>
    <string name="button_validate_otp">Next</string>
    <string name="byte_unit_bytes">B</string>
    <string name="byte_unit_bytes_formatted">%1$d B</string>
    <string name="byte_unit_gigabytes">GB</string>
    <string name="byte_unit_gigabytes_formatted">%1$d GB</string>
    <string name="byte_unit_gigabytes_formatted_decimal">%.1f GB</string>
    <string name="byte_unit_kilobytes">kB</string>
    <string name="byte_unit_kilobytes_formatted">%1$d kB</string>
    <string name="byte_unit_kilobytes_formatted_decimal">%.1f kB</string>
    <string name="byte_unit_megabytes">MB</string>
    <string name="byte_unit_megabytes_formatted">%1$d MB</string>
    <string name="byte_unit_megabytes_formatted_decimal">%.1f MB</string>
    <string name="calling_code_picker_search_hint">Choose country</string>
    <string name="cat_album_save">SAVE</string>
    <string name="cellular_data_remaining">Remaining: %s</string>
    <string name="cellular_data_reset">Your limit will reset on %s.</string>
    <string name="cellular_data_usage_subtext">mobile data used this month</string>
    <string name="cellular_data_usage_usage_divider">" / "</string>
    <string name="cellular_data_used">Used: %s</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_username_accept_privacy">"To learn more about how Spotify collects, uses, shares and protects your personal data please read Spotify's &lt;a href=\"https://www.spotify.com/legal/privacy-policy/plain/\">Privacy Policy&lt;/a>."</string>
    <string name="choose_username_accept_tos">"By creating an account, you agree to Spotify's &lt;a href=\"https://www.spotify.com/legal/end-user-agreement/plain/\">Terms and Conditions of Use&lt;/a>."</string>
    <string name="choose_username_alert_cancel">Cancel</string>
    <string name="choose_username_alert_ok">OK</string>
    <string name="choose_username_gender_female">Female</string>
    <string name="choose_username_gender_hint">Gender</string>
    <string name="choose_username_gender_male">Male</string>
    <string name="choose_username_gender_neutral">Non-binary</string>
    <string name="choose_username_too_young">"Sorry, but you don't meet Spotify's age requirements."</string>
    <string name="collection_context_name">Favorite Songs</string>
    <string name="com.crashlytics.android.build_id">84d66d67-8bee-410e-abc4-7e42d62bb955</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="header_log_in_with">Log in with</string>
    <string name="search_hint_text">Search artist, song or playlist</string>
    <string name="search_initial_subtext">from millions of artists, songs and playlists</string>
    <string name="search_initial_text">Find the music you love</string>
    <string name="settings_about_app_version_label">App Version</string>
    <string name="settings_about_open_source_libraries">Open Source Libraries</string>
    <string name="settings_about_privacy_policy">Privacy Policy</string>
    <string name="settings_about_terms_and_conditions">Terms and Conditions</string>
    <string name="settings_about_update">Update</string>
    <string name="settings_cellular_change_limit_description">"We'll let you know if it goes over your limit."</string>
    <string name="settings_cellular_change_limit_label">Set a monthly limit for Spotify Lite:</string>
    <string name="settings_cellular_change_limit_option_1">250 MB</string>
    <string name="settings_cellular_change_limit_option_2">500 MB</string>
    <string name="settings_cellular_change_limit_option_3">750 MB</string>
    <string name="settings_cellular_change_limit_option_4">1 GB</string>
    <string name="settings_cellular_change_limit_option_5">2 GB</string>
    <string name="settings_cellular_change_limit_option_6">3 GB</string>
    <string name="settings_storage_app_cache">Cache:</string>
    <string name="settings_storage_app_cache_explanation">These are small, temporary files to make the app work faster on slow networks.</string>
    <string name="settings_storage_app_downloads">Downloads:</string>
    <string name="settings_storage_app_downloads_explanation">"This is the music downloaded for offline listening on Spotify Lite. You'll need to download it again to listen offline if you delete it."</string>
    <string name="settings_storage_clear_cache_button">Clear cache</string>
    <string name="settings_storage_clear_downloads_button">Delete all downloads</string>
    <string name="settings_storage_location">Storage Location</string>
    <string name="settings_storage_location_title">Cache and Downloads</string>
    <string name="signup_v1_birth_date_hint">Date of birth</string>
</resources>