<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/label_cellular_change_limit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/settings_cellular_change_limit_label" android:filterTouchesWhenObscured="false" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <GridLayout android:layout_gravity="center_horizontal" android:id="@id/cellular_change_limit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:columnCount="3" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/label_cellular_change_limit">
        <Button android:id="@id/cellular_limit_option_1" android:layout_width="90.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="10.0dip" android:text="@string/settings_cellular_change_limit_option_1" android:filterTouchesWhenObscured="false" style="@style/Widget.Lite.Button.Choice" />
        <Button android:id="@id/cellular_limit_option_2" android:layout_width="90.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="10.0dip" android:text="@string/settings_cellular_change_limit_option_2" android:filterTouchesWhenObscured="false" style="@style/Widget.Lite.Button.Choice" />
        <Button android:id="@id/cellular_limit_option_3" android:layout_width="90.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="10.0dip" android:text="@string/settings_cellular_change_limit_option_3" android:filterTouchesWhenObscured="false" style="@style/Widget.Lite.Button.Choice" />
        <Button android:id="@id/cellular_limit_option_4" android:layout_width="90.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="10.0dip" android:text="@string/settings_cellular_change_limit_option_4" android:filterTouchesWhenObscured="false" style="@style/Widget.Lite.Button.Choice" />
        <Button android:id="@id/cellular_limit_option_5" android:layout_width="90.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="10.0dip" android:text="@string/settings_cellular_change_limit_option_5" android:filterTouchesWhenObscured="false" style="@style/Widget.Lite.Button.Choice" />
        <Button android:id="@id/cellular_limit_option_6" android:layout_width="90.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="10.0dip" android:text="@string/settings_cellular_change_limit_option_6" android:filterTouchesWhenObscured="false" style="@style/Widget.Lite.Button.Choice" />
    </GridLayout>
    <TextView android:textSize="13.0sp" android:textColor="@color/gray_70" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/settings_cellular_change_limit_description" app:layout_constraintEnd_toEndOf="@id/cellular_change_limit" app:layout_constraintLeft_toLeftOf="@id/cellular_change_limit" app:layout_constraintRight_toRightOf="@id/cellular_change_limit" app:layout_constraintStart_toStartOf="@id/cellular_change_limit" app:layout_constraintTop_toBottomOf="@id/cellular_change_limit" />
</androidx.constraintlayout.widget.ConstraintLayout>