<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:background="?pasteActionBarBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.spotify.android.glue.components.toolbar.GlueToolbarLayout android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" />
    </FrameLayout>
    <TextView android:textSize="20.0sp" android:gravity="center" android:id="@id/app_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" />
    <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="48.0dip" android:layout_marginRight="48.0dip" android:layout_marginBottom="24.0dip" android:text="@string/settings_about_app_version_label" />
    <Button android:layout_gravity="center_horizontal" android:id="@id/button_update" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="48.0dip" android:layout_marginRight="48.0dip" android:layout_marginBottom="24.0dip" android:text="@string/settings_about_update" android:filterTouchesWhenObscured="false" style="@style/Widget.Glue.Button.Primary.White" />
    <TextView android:textSize="18.0sp" android:ellipsize="end" android:id="@id/terms_and_conditions" android:paddingLeft="24.0dip" android:paddingTop="12.0dip" android:paddingRight="24.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_about_terms_and_conditions" android:maxLines="1" />
    <TextView android:textSize="18.0sp" android:ellipsize="end" android:id="@id/privacy_policy" android:paddingLeft="24.0dip" android:paddingTop="12.0dip" android:paddingRight="24.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_about_privacy_policy" android:maxLines="1" />
    <TextView android:textSize="18.0sp" android:ellipsize="end" android:id="@id/open_source_libraries" android:paddingLeft="24.0dip" android:paddingTop="12.0dip" android:paddingRight="24.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_about_open_source_libraries" android:maxLines="1" />
</LinearLayout>