<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:background="?pasteActionBarBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.spotify.android.glue.components.toolbar.GlueToolbarLayout android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" />
    </FrameLayout>
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="32.0dip" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ViewStub android:id="@id/device_storage" android:inflatedId="@id/device_storage" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <ViewStub android:id="@id/external_storage" android:inflatedId="@id/external_storage" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/device_storage" />
            <include android:id="@id/cache_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="16.0dip" app:layout_constraintTop_toBottomOf="@id/external_storage" layout="@layout/divider" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/app_storage_cache_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/settings_storage_app_cache" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cache_divider" style="?pasteTextAppearanceBodyMediumBold" />
            <TextView android:textSize="16.0sp" android:textColor="@color/gray_70" android:id="@id/app_storage_cache_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" app:layout_constraintBaseline_toBaselineOf="@id/app_storage_cache_title" app:layout_constraintStart_toEndOf="@id/app_storage_cache_title" style="?pasteTextAppearanceBodyMedium" />
            <TextView android:textSize="11.0sp" android:textColor="@color/gray_70" android:id="@id/app_storage_cache_explanation" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/settings_storage_app_cache_explanation" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/app_storage_cache_title" style="?pasteTextAppearanceBodyMedium" />
            <Button android:id="@id/app_storage_cache_clear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/settings_storage_clear_cache_button" android:filterTouchesWhenObscured="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/app_storage_cache_explanation" style="@style/Widget.Lite.Button.Primary.Small.Gray" />
            <include android:id="@id/downloads_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="16.0dip" app:layout_constraintTop_toBottomOf="@id/app_storage_cache_clear" layout="@layout/divider" />
            <TextView android:textStyle="bold" android:textColor="@color/white" android:id="@id/app_storage_downloads_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/settings_storage_app_downloads" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/downloads_divider" style="?pasteTextAppearanceBodyMediumBold" />
            <TextView android:textColor="@color/gray_70" android:id="@id/app_storage_downloads_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" app:layout_constraintBaseline_toBaselineOf="@id/app_storage_downloads_title" app:layout_constraintStart_toEndOf="@id/app_storage_downloads_title" />
            <TextView android:textSize="11.0sp" android:textColor="@color/gray_70" android:id="@id/app_storage_downloads_explanation" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/settings_storage_app_downloads_explanation" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/app_storage_downloads_title" />
            <Button android:id="@id/app_storage_downloads_clear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/settings_storage_clear_downloads_button" android:filterTouchesWhenObscured="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/app_storage_downloads_explanation" style="@style/Widget.Lite.Button.Primary.Small.Gray" />
            <include android:id="@id/storage_location_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="16.0dip" app:layout_constraintTop_toBottomOf="@id/app_storage_downloads_clear" layout="@layout/divider" />
            <TextView android:textStyle="bold" android:textColor="@color/white" android:id="@id/app_storage_location_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/settings_storage_location_title" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/storage_location_divider" style="?pasteTextAppearanceBodyMediumBold" />
            <LinearLayout android:orientation="vertical" android:id="@id/app_storage_location" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:minHeight="64.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/app_storage_location_title">
                <TextView android:textStyle="bold" android:textColor="?glueRowTitleColor" android:ellipsize="end" android:gravity="start" android:id="@android:id/text1" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/settings_storage_location" android:maxLines="1" style="?pasteTextAppearanceBodyMedium" />
                <TextView android:textAppearance="?pasteTextAppearanceBodySmall" android:textColor="?glueRowSubtitleColor" android:ellipsize="end" android:gravity="center_vertical" android:id="@android:id/text2" android:duplicateParentState="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:maxLines="1" />
            </LinearLayout>
            <androidx.constraintlayout.widget.Group android:id="@id/storage_location_group" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" app:constraint_referenced_ids="storage_location_divider,app_storage_location_title,app_storage_location" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>