<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.spotify.android.glue.components.toolbar.GlueToolbarLayout android:id="@id/toolbar" android:layout_width="0.0dip" android:layout_height="?actionBarSize" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textAppearance="?pasteTextAppearanceHeaderSmall" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/header_log_in_with" app:layout_constraintBottom_toTopOf="@id/button_phone_number" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Barrier android:id="@id/start_barrier" android:layout_width="fill_parent" android:layout_height="0.0dip" app:barrierDirection="start" app:constraint_referenced_ids="button_phone_number,button_email" />
    <androidx.constraintlayout.widget.Barrier android:id="@id/end_barrier" android:layout_width="fill_parent" android:layout_height="0.0dip" app:barrierDirection="end" app:constraint_referenced_ids="button_email,button_phone_number" />
    <FrameLayout android:id="@id/button_phone_number" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" app:layout_constraintBottom_toTopOf="@id/button_email" app:layout_constraintEnd_toEndOf="@id/end_barrier" app:layout_constraintStart_toStartOf="@id/start_barrier" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" app:layout_constraintWidth_max="304.0dip" style="?glueButtonPrimaryGreen">
        <TextView android:layout_gravity="center_horizontal" android:id="@id/button_phone_number_text" android:background="@null" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_phone" android:drawablePadding="8.0dip" style="?glueButtonPrimaryGreen" />
    </FrameLayout>
    <FrameLayout android:id="@id/button_email" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/end_barrier" app:layout_constraintStart_toStartOf="@id/start_barrier" app:layout_constraintTop_toBottomOf="@id/button_phone_number" app:layout_constraintWidth_max="304.0dip" style="?glueButtonPrimaryWhite">
        <TextView android:layout_gravity="center_horizontal" android:id="@id/button_email_text" android:background="@null" android:focusable="false" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/button_email" android:drawablePadding="8.0dip" style="?glueButtonPrimaryWhite" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>